[metadata]
name = rebasehelper
description = This tool helps you rebase your package to the latest version.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rebase-helper/rebase-helper
author = Petr Hráček
author_email = phracek@redhat.com
maintainer = Nikola Forró
maintainer_email = nforro@redhat.com
license = GPLv2+
license_files =
    LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: System :: Operating System
    Topic :: System :: Software Distribution
    Topic :: Utilities
keywords =
    rebase
    packaging
    rpm
    spec
project_urls =
    Source Code = https://github.com/rebase-helper/rebase-helper
    Documentation = https://rebase-helper.readthedocs.io
    Bug Tracker = https://github.com/rebase-helper/rebase-helper/issues

[options]
packages = find:
install_requires =
    copr
    pyquery
    python-pam
    requests
    rpkg
    unidiff
    GitPython
    specfile
python_requires = >=3.9
include_package_data = True

[options.entry_points]
console_scripts =
    rebase-helper = rebasehelper.cli:CliHelper.run
rebasehelper.build_tools =
    rpmbuild = rebasehelper.plugins.build_tools.rpm.rpmbuild:Rpmbuild
    mock = rebasehelper.plugins.build_tools.rpm.mock:Mock
    koji = rebasehelper.plugins.build_tools.rpm.koji_:Koji
    copr = rebasehelper.plugins.build_tools.rpm.copr_:Copr
rebasehelper.srpm_build_tools =
    rpmbuild = rebasehelper.plugins.build_tools.srpm.rpmbuild:Rpmbuild
    mock = rebasehelper.plugins.build_tools.srpm.mock:Mock
rebasehelper.checkers =
    rpmdiff = rebasehelper.plugins.checkers.rpmdiff:RpmDiff
    pkgdiff = rebasehelper.plugins.checkers.pkgdiff:PkgDiff
    abipkgdiff = rebasehelper.plugins.checkers.abipkgdiff:AbiPkgDiff
    csmock = rebasehelper.plugins.checkers.csmock:CsMock
    licensecheck = rebasehelper.plugins.checkers.licensecheck:LicenseCheck
    sonamecheck = rebasehelper.plugins.checkers.sonamecheck:SonameCheck
    rpminspect-rpm = rebasehelper.plugins.checkers.rpminspect_rpm:RpminspectRpm
    rpminspect-srpm = rebasehelper.plugins.checkers.rpminspect_srpm:RpminspectSrpm
rebasehelper.spec_hooks =
    typo-fix = rebasehelper.plugins.spec_hooks.typo_fix:TypoFix
    pypi-url-fix = rebasehelper.plugins.spec_hooks.pypi_url_fix:PyPIURLFix
    ruby-helper = rebasehelper.plugins.spec_hooks.ruby_helper:RubyHelper
    commit-hash-updater = rebasehelper.plugins.spec_hooks.commit_hash_updater:CommitHashUpdater
    paths-to-rpm-macros = rebasehelper.plugins.spec_hooks.paths_to_rpm_macros:PathsToRPMMacros
    escape-macros = rebasehelper.plugins.spec_hooks.escape_macros:EscapeMacros
    replace-old-version = rebasehelper.plugins.spec_hooks.replace_old_version:ReplaceOldVersion
rebasehelper.build_log_hooks =
    files = rebasehelper.plugins.build_log_hooks.files:Files
rebasehelper.versioneers =
    anitya = rebasehelper.plugins.versioneers.anitya:Anitya
    pypi = rebasehelper.plugins.versioneers.pypi:PyPI
    rubygems = rebasehelper.plugins.versioneers.rubygems:RubyGems
    npmjs = rebasehelper.plugins.versioneers.npmjs:NPMJS
    cpan = rebasehelper.plugins.versioneers.cpan:CPAN
    hackage = rebasehelper.plugins.versioneers.hackage:Hackage
rebasehelper.output_tools =
    json = rebasehelper.plugins.output_tools.json_:JSON
    text = rebasehelper.plugins.output_tools.text:Text

[options.extras_require]
testing =
    pytest

[options.packages.find]
exclude =
    tests*
